# newsletter

./: .gitignore  Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20250220082837_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
