[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dev-dependencies]
reqwest = "0.12.12"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
config = "0.15.8"
serde = { version = "1.0.218", features = ["derive"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.14.0", features = ["v4"]}

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
